--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -26,7 +26,7 @@
 *{
 	font-family: 'soberanasans-regular', sans-serif;
 	font-weight: 400;
-	font-style: normal;	
+	font-style: normal;
 }
 h1,h2,h3,h4,h5,p,span,a,div{font-family: 'soberanasans-regular', sans-serif !important;}
 a.sidebar-toggle{font-family: fontAwesome !important;}
@@ -45,7 +45,7 @@ a:hover img.hover{
 }
 /* ----------- tabla   --------------- */
 table thead th{
-	font-family: 'soberanasans-regular', sans-serif;	
+	font-family: 'soberanasans-regular', sans-serif;
 	font-size:13px;
 	color:#ffffff;
 	border:none;
@@ -53,15 +53,15 @@ table thead th{
 	text-align: center;
 	background-color: #7d222b;
 }
-select:focus, 
-textarea:focus, 
-input[type="file"]:focus, 
+select:focus,
+textarea:focus,
+input[type="file"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus,
 input[type="text"]:focus {
-	outline:none;border-color: #7d222b; 
+	outline:none;border-color: #7d222b;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(159, 37, 40, .6);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(159, 37, 40, .6);	
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(159, 37, 40, .6);
 	}
 textarea,
 input[type="email"],
@@ -107,7 +107,7 @@ form.form-horizontal h3 {
   border-color: #333333;
 }
 .btn-link{
-	color: #7d222b;	
+	color: #7d222b;
 }
 .btn-link:focus,
 .btn-link:hover{
@@ -297,8 +297,8 @@ input[type="checkbox"], input[type="radio"] {
 	-webkit-border-radius: 8px !important;
 	-khtml-border-radius: 8px !important;
 }
-.divlogin .input-group .form-control:not(:first-child):not(:last-child), 
-.divlogin .input-group-addon:not(:first-child):not(:last-child), 
+.divlogin .input-group .form-control:not(:first-child):not(:last-child),
+.divlogin .input-group-addon:not(:first-child):not(:last-child),
 .divlogin .input-group-btn:not(:first-child):not(:last-child),
 .divlogin .form-control{
 	border-radius:0px 8px 8px 0px !important;
@@ -369,10 +369,10 @@ input[type="checkbox"], input[type="radio"] {
 }
 .titulos{
 	background-color:#6b031f;
-	color:#ffffff; 
+	color:#ffffff;
 	font-size:16px;
 	padding:5px 10px;
-	margin-top:0px;  
+	margin-top:0px;
 }
 .yimg{
 	border-style: solid;
@@ -380,7 +380,7 @@ input[type="checkbox"], input[type="radio"] {
 	border-color: #6b031f;
 }
 .rad{
-padding-left: 1em; 	
+padding-left: 1em;
 }
 /*estilos datos socioeconoicos*/
 .sep{
@@ -394,18 +394,23 @@ padding-left: 1px;
 padding-right: 1px;
 }
 .sinp{
-	margin-bottom: 0px; 
+	margin-bottom: 0px;
 }
 .sinp1{
-	margin-bottom: 2px; 
+	margin-bottom: 2px;
 }
 .inglb{
-width:85px; 	
+width:85px;
 }
-.subraya{
-   color:green; 
-   font-size: 2em;	
+.valido{
+	color: black;
+	 background-color: green;
+	 opacity: 0.7;
+	 color: white;
 }
 
-
-  
+.invalido{
+	 background-color: red;
+	 opacity: 0.7;
+	 color: white;
+}
